<resources>
    <string name="app_name" translatable="false">UA21 Camp</string>
    <string name="title_activity_tab" translatable="false">TabActivity</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string-array name="numbersOfDaysArray">
        <item>28/8</item>
        <item>29/8</item>
        <item>30/8</item>
        <item>31/8</item>
        <item>01/9</item>
        <item>02/9</item>
        <item>03/9</item>
        <item>04/9</item>
    </string-array>

    <string-array name="namesOfDaysArray">
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
        <item>Понедельник</item>
        <item>Вторник</item>
    </string-array>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_workshop">Мастер-классы</string>
    <string name="title_notes">Заметки</string>
    <string name="title_settings">Настройки</string>
    <string name="hint_note">Напиши сюда что-то интересное :)</string>
    <string name="label_number_of_day" translatable="false">28/8</string>
    <string name="label_name_of_day">пон</string>
    <string name="label_fullname_of_day">ПОНЕДЕЛЬНИК</string>
    <string name="label_name_of_event" translatable="false">Darina Maltseva</string>
    <string name="label_confirm_note" translatable="false">Confirm note</string>
    <string name="list_of_events_json" translatable="false">ListOfEvents.json</string>
    <string name="list_of_events_en_json" translatable="false">listOfEventsEn.json</string>
    <string name="list_of_events_ua_json" translatable="false">ListOfEventsUa.json</string>
    <string name="label_note" translatable="false">This is a note</string>
    <string name="label_list_of_notes_is_empty">У тебя еще нет ни одной заметки :(</string>
    <string name="label_event_time" translatable="false">10.00</string>
    <string name="label_instagram" translatable="false">Instagram</string>
    <string name="label_telegram" translatable="false">Telegram</string>
    <string name="label_english" translatable="false">en</string>
    <string name="label_russian" translatable="false">ru</string>
    <string name="label_ukranian" translatable="false">ua</string>
    <string name="time_notification_label">Через 30 минут</string>
    <string name="label_notification_channel" translatable="false">Notifications channel</string>
    <string name="label_description" translatable="false">Description</string>
    <string name="label_cherez_30_minyt" translatable="false">Через 30 минут</string>
    <string name="label_language">Язык интерфейса:</string>
    <string name="label_ua">Украинский язык</string>
    <string name="label_ru">Русский язык</string>
    <string name="label_en">Английский язык</string>
    <string name="label_theme">Тема:</string>
    <string name="label_light">Светлая</string>
    <string name="label_dark">Темная</string>
    <string name="label_confirm_theme">Поменять тему</string>
    <string name="label_confirm_language">Поменять язык</string>
    <string name="label_notifications_settings">Чтобы не получать напоминалки - отключите оповещения для приложения в настройках</string>
    <string name="label_open_settings">Открыть настройки</string>
    <string name="label_login_logo" translatable="false">Dance Camp UA 21</string>
    <string name="label_next">Далее</string>
    <string name="label_error_password">Пароль должен содержать не менее 8 символов.</string>
    <string name="label_error_passwords_dont_match">Пароли должны совпадать.</string>

    <!--Lock Check strings -->
    <string name="lock_exit">Выход</string>
    <string name="lock_settings">Настройки</string>
    <string name="lock_title">Экран блокировки</string>

    <string name="sign_up_snack_message">Зарегестрируйте хотя бы один отпечаток.</string>
    <string name="sign_up_snack_action">НАСТРОЙКИ</string>

    <string name="authentication_fingerprint_success">Отпечаток распознан</string>
    <string name="authentication_fingerprint_not_recognized">Отпечаток не распознан. Попробуйте еще раз</string>
    <string name="authentication_fingerprint_description">Подтвердите отпечаток для продолжения</string>
    <string name="authentication_password_description">Введите пароль для продолжения</string>
    <string name="authentication_fingerprint_new_enrollment_description">"         К этому устройству был добавлен новый отпечаток пальца, поэтому требуется ваш пароль."</string>
    <string name="authentication_password">Пароль</string>
    <string name="authentication_fingerprint_use_in_future">Использовать отпечатки в будущем</string>
    <string name="authentication_title">Аутентификация</string>
    <string name="authentication_ok" translatable="false">OK</string>
    <string name="authentication_cancel">Отмена</string>
    <string name="authentication_use_password">Использовать пароль</string>
    <string name="authentication_error_incorrect_password">Пароль неправильный</string>
    <string name="hint_enter_password">Введите пароль</string>
    <string name="hint_confirm_password">Подвердите пароль</string>
    <string name="label_cancel">Отмена</string>
    <string name="authentication_fingerprint_icon_description">Иконка отпечатка</string>
    <string name="lock_body">"         Безопасный экран блокировки не настроен. Чтобы продолжить работу с этим приложением, перейдите в «Настройки» и установите метод блокировки экрана."</string>
    <string name="sign_up_allow_fingerprint">Разрешить отпечатки для дальнейшего использования</string>
    <string name="authentication_fingerprint_hint">Сенсорный датчик</string>
    <string name="label_current_weather">Погода</string>
    <string name="label_max_temp">Макс. Температура:</string>
    <string name="label_10_c" translatable="false">10 ℃</string>
    <string name="label_degrees_celsius" translatable="false">%1$s℃</string>
    <string name="label_min_temp">Мин. Температура:</string>
    <string name="label_wind">Ветер:</string>
    <string name="label_4_6" translatable="false">4.6 m/s</string>
    <string name="label_m_s">%1$s м/с</string>
    <string name="weather_forecast_isn_t_available">Прогноз погоды недоступен :(</string>
>>>>>>> feature/weather_screen
</resources>
